odoo-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: odoo
  name: odoo
  namespace: odoo
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: odoo
  template:
    metadata:
      labels:
        app: odoo
    spec:
      imagePullSecrets:
      - name: odooprimart
      containers:
      - env:
        - name: HOST
          value: postgre
        - name: PASSWORD
          value: odoo
        - name: USER
          value: odoo
        image: primaart/odoo:eam_rs
        args:
        imagePullPolicy: Always
        name: web
        ports:
        - name: http
          containerPort: 8069
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 300
          periodSeconds: 30
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 6
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 6
        volumeMounts:
        - name: odoo-data
          mountPath: /var/lib/odoo
        - name: odoo-addons-persistent-storage
          mountPath: /mnt/extra-addons
        - name: odoo-conf
          mountPath: /etc/odoo/odoo.conf
          subPath: odoo.conf
      hostname: web
      restartPolicy: Always
      volumes:
      - name: odoo-data
        persistentVolumeClaim:
          claimName: odoo-data
      - name: odoo-addons-persistent-storage
        persistentVolumeClaim:
          claimName: odoo-addons-pv-claim
      - name: odoo-conf
        configMap:
          name: odoo-conf
          items:
            - key: odoo.conf
              path: odoo.conf
