odoo-service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: odoo
  name: odoo
  namespace: odoo
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8069
  selector:
    app: odoo
