postgre-service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgre
  name: postgre
  namespace: odoo
spec:
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
  selector:
    app: postgre
