odoo-ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    app: odoo
  name: odoo
  namespace: odoo
spec:
  ingressClassName: nginx-controller
  rules:
  - host: #######
    http:
      paths:
      - path: /
        backend:
          serviceName: odoo
          servicePort: 80
